# AdjointLightTracing-backup

./: .gitignore  .gitmodules  CMakeLists.txt
assets/: CMakeLists.txt  optimize_shaders.bat
assets/shader/default_path_tracer/: defines.h  path_tracer.rahit  path_tracer.rchit  path_tracer.rgen  payload.glsl  shadow_ray.rahit  shadow_ray.rchit  shadow_ray.rmiss  sphere.rint
assets/shader/default_rasterizer/: bounding_box.frag  bounding_box.geom  bounding_box.vert  circle.frag  circle.geom  circle.vert  defines.h  shade.frag  shade.geom  shade.vert  tbn_vis.frag  tbn_vis.geom  tbn_vis.vert
assets/shader/example_impl/: simple_compute.hlsl  simple_compute_glsl.comp
assets/shader/gui/: line.frag  line.vert
assets/shader/ialt/: backward_pt_rgen.glsl  backward_rgen.glsl  colorconversion.glsl  defines.h  deriv_vis_rgen.glsl  draw_on_mesh.comp  forward_pt_rgen.glsl  forward_rchit.glsl  forward_rgen.glsl  forward_rmiss.glsl  functions.glsl  ggx.glsl  ialt_unified.glsl  obj_func.comp  opti_para_buffer.glsl  path_trace_unified.glsl  perVtxTexColor.glsl  rasterizer_fragment.glsl  rasterizer_geometry.glsl  rasterizer_vertex.glsl  sh.glsl  sh_vis.frag  sh_vis.geom  sh_vis.vert  single_sh_vis.frag  single_sh_vis.geom  single_sh_vis.vert  target_sh.glsl  trace_rays.glsl
assets/shader/raytracing_thermal/: defines.h  payload.glsl  simple_ray.rahit  simple_ray.rgen  transport_ray.rahit  transport_ray.rchit  transport_ray.rgen  transport_ray.rmiss
cache/shader/: 1105121384844927063.spv  1235383104486228638.spv  2158978214588311703.spv  2567747056049213830.spv  2830634430274596589.spv  4432961794594360959.spv  4674986305899550016.spv  4749750881594749643.spv  4797256928650170105.spv  5058461679336325925.spv  6465020923756340248.spv  6952256839580089665.spv  6987186802546885166.spv  8380373582084437342.spv
include/tamashii/: public.hpp  tamashii.hpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt  tamashii.cpp
src/core/common/: common.cpp  input.cpp  math.cpp  vars.cpp  window_thread.cpp
src/core/gui/: main_gui.cpp
src/core/gui/x11/: imgui_impl_x11.cpp
src/core/io/: io.cpp
src/core/io/exporter/: basic.cpp  gltf.cpp  image.cpp
src/core/io/importer/: basic.cpp  bsp.cpp  gltf.cpp  ies.cpp  image.cpp  ldt.cpp  obj.cpp  pbrt.cpp  ply.cpp
src/core/platform/macos/: filewatcher.cpp  system.cpp  window.mm
src/core/platform/unix/: filewatcher.cpp  system.cpp  window.cpp
src/core/platform/win32/: filewatcher.cpp  system.cpp  window.cpp
src/core/render/: render_system.cpp
src/core/scene/: asset.cpp  camera.cpp  image.cpp  light.cpp  material.cpp  model.cpp  ref_entities.cpp  render_cmd_system.cpp  render_scene.cpp  scene_graph.cpp
src/core/topology/: find_tangents.cpp  flat_normals.cpp  mikktspace.cpp
src/core_bindings/: CMakeLists.txt  camera.cpp  core_bindings.cpp  light.cpp  model.cpp
src/cuda_helper/: CMakeLists.txt
src/cuda_helper/convenience/: cuda_type_converter.cpp  geometry_to_gpu.cpp
src/cuda_helper/cuo/parts/: buffer.cpp  image.cpp  stream.cpp
src/default_implementations/: CMakeLists.txt  default_path_tracer.cpp  default_rasterizer.cpp
src/default_implementations/bindings/: default_path_tracer.cpp  default_rasterizer.cpp
src/implementations/: CMakeLists.txt
src/implementations/empty/: CMakeLists.txt  main.cpp
src/implementations/example_compute/: CMakeLists.txt  example_impl.cpp  example_impl.hpp  main.cpp
src/implementations/example_compute/python_bindings/: CMakeLists.txt  example.py  module.cpp
src/implementations/interactive_adjoint_light_tracing/: CMakeLists.txt  LBFGSppWrapper.hpp  codegen_dRdrv.h  constraint.hpp  ialt.cpp  ialt.hpp  light_trace_opti.cpp  light_trace_opti.hpp  light_trace_opti_testcases.cpp  main.cpp  objectivefunction.cpp  objectivefunction.hpp  parameter.cpp  parameter.hpp  renderer.hpp
src/implementations/interactive_adjoint_light_tracing/LBFGSpp/: GitHub - yixuanLBFGSpp A header-only C++ library for L-BFGS algorithm.URL  LBFGS.h
src/implementations/interactive_adjoint_light_tracing/LBFGSpp/LBFGS/: LineSearchBacktracking.h  Param.h
src/implementations/interactive_adjoint_light_tracing/cmaes/: CMAMinimizer.cpp  CMAMinimizer.h  cmaes.c
src/implementations/interactive_adjoint_light_tracing/python_bindings/: CMakeLists.txt  module.cpp  opt_param.hpp  test.py
src/renderer_vk/: CMakeLists.txt  gui_backend.cpp  render_backend.cpp  vulkan_instance.cpp
src/renderer_vk/convenience/: geometry_to_gpu.cpp  light_to_gpu.cpp  material_to_gpu.cpp  rvk_type_converter.cpp  texture_to_gpu.cpp
src/rvk/: CMakeLists.txt
src/rvk/include/rvk/: rvk.hpp  shader_compiler.hpp  vk_function_list.inl
src/rvk/include/rvk/parts/: acceleration_structure.hpp  acceleration_structure_bottom_level.hpp  acceleration_structure_top_level.hpp  buffer.hpp  command_buffer.hpp  command_pool.hpp  cuda.hpp  descriptor.hpp  device_logical.hpp  device_physical.hpp  fence.hpp  framebuffer.hpp  image.hpp  instance.hpp  logger.hpp  memory.hpp  pipeline.hpp  pipeline_compute.hpp  pipeline_rasterize.hpp  pipeline_ray_trace.hpp  queue.hpp  queue_family.hpp  renderpass.hpp  rvk_public.hpp  sampler.hpp  sampler_config.hpp  semaphore.hpp  shader.hpp  shader_compute.hpp  shader_rasterize.hpp  shader_ray_trace.hpp  swapchain.hpp
src/rvk/src/: helper.cpp  setup.cpp
src/rvk/src/parts/: acceleration_structure.cpp  acceleration_structure_bottom_level.cpp  acceleration_structure_top_level.cpp  buffer.cpp  command_buffer.cpp  command_pool.cpp  cuda.cpp  descriptor.cpp  device_logical.cpp  device_physical.cpp  fence.cpp  framebuffer.cpp  image.cpp  instance.cpp  logger.cpp  memory.cpp  pipeline.cpp  pipeline_compute.cpp  pipeline_rasterize.cpp  pipeline_ray_trace.cpp  queue.cpp  queue_family.cpp  renderpass.cpp  rvk_private.hpp  sampler.cpp  semaphore.cpp  shader.cpp  shader_compiler.cpp  shader_compiler.hpp  shader_compute.cpp  shader_rasterize.cpp  shader_ray_trace.cpp  swapchain.cpp
src/tamashii/: CMakeLists.txt  main.cpp  renderer.cpp  renderer.hpp
src/tamashii/python_bindings/: CMakeLists.txt  module.cpp
test/: Test-Office-v0.4.gltf
(+106 files in other folders)
