FILE(GLOB impls RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*")
#message("glob impls " ${impls} "...")

foreach(impl ${impls})
	set(IMPL_NAME "")
	string(TOUPPER ${impl} IMPL_NAME)
	if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${impl})
		if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${impl}/CMakeLists.txt")  	
			option(BUILD_${IMPL_NAME} "Build ${impl}" ON)
			if(BUILD_${IMPL_NAME})
				add_subdirectory(${impl})
				#message("adding impl " ${impl} "...")
			endif()
    	endif()
	endif()
endforeach()